# manhattan

./: .gitignore  .specignore  Cargo.toml  LICENSE  build-plan.md  lint-output.txt
docs/: build-plan-stage-5.md  build-plan.md  design-exploration.md  design.md
docs/discussions/: bootstrapping-components.md  gpt-criticism.md  large-change-splitting.md
specs/: architecture.md  bootstrapping.md  dag-construction.md  parser-api.md  parser-cli.md  prompt-standards.md  rust-standards.md  spec-format.md  spec-guidance.md  spec-parsing.md  spec-standards.md  specifies-link-parsing.md
specs-draft/: architecture.md
specs-draft/external-integration/: interface-contracts.md
specs-draft/reconciler/: reconciliation-reporting.md
specs-draft/test-deriver/: test-derivation.md
specs-draft/traceability/: traceability-mapping.md
specs/external-integration/: interface-contracts.md
specs/llm/: invocation-errors.md  invoker-api.md  llm-invocation.md  openai-compatible-transport.md  protocol-domain-mapping.md  response-validation.md  tool-calling-session.md
specs/prompt-generator/: context-assembly.md  prompt-generation.md  prompt-generator-api.md  template-filling.md
specs/reconciler/: reconciliation-execution.md  reconciliation-reporting.md
specs/spec-linter/: ambiguity-detection.md  contradiction-detection.md  gap-detection.md  issue-codes.md  linter-cli.md  spec-linting.md  structural-checks.md
specs/spec-parser/: dag-construction.md  parser-api.md  parser-cli.md  spec-parsing.md  specifies-link-parsing.md
src/: lib.rs  main.rs
src/lint/: mod.rs
(+12 files in other folders)
