[package]
name = "manhattan_spec_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
petgraph = "0.6"
pulldown-cmark = "0.13"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"
walkdir = "2.5"

[dev-dependencies]
proptest = "1.6"
tempfile = "3.13"
