[package]
name = "manhattan_spec_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
petgraph = "0.6"
pulldown-cmark = "0.13"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.43", features = ["rt-multi-thread"] }
url = "2.5"
walkdir = "2.5"

[dev-dependencies]
proptest = "1.6"
tempfile = "3.13"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
